name:                reflex-server-servant
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Reflex.Server.Servant
                     , Util.Tuples
  build-depends:       base >=4.9 && <4.10
                     , mtl >=2.2 && <2.3
                     , primitive >=0.6 && <0.7
                     , hashable >=1.2 && <1.3
                     , stm >=2.4 && <2.5
                     , bytestring >= 0.10 && < 0.11
                     , containers
                     , aeson
                     , network
                     , ttrie
                     , dependent-sum
                     , ref-tf
                     , reflex
                     , servant 
                     , servant-server
                     , http-api-data
                     , wai
                     , reflex-basic-host
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010

executable example
  main-is:             Example.hs
  other-modules:       Util.List
  build-depends:       base >=4.9 && <4.10
                     , mtl >=2.2 && <2.3
                     , hashable >=1.2 && <1.3
                     , stm >=2.4 && <2.5
                     , containers
                     , dependent-sum
                     , ref-tf
                     , reflex
                     , reflex-dom-core
                     , servant 
                     , servant-server
                     , http-api-data
                     , wai
                     , warp
                     , reflex-basic-host
                     , transformers
                     , these
                     , reflex-server-servant
  hs-source-dirs:      exe
  ghc-options:         -Wall
  default-language:    Haskell2010
